--- a/docs/views/grid.html
+++ b/docs/views/grid.html
@@ -21,3 +21,16 @@
 <div class="row-1 field {{component.grid.columns.class1}}">
     <div class="theme-secondary col-{{component.grid.column.class1}} col-offset-{{component.grid.column.class2}}">col-{{component.grid.column.class1}} col-offset-{{component.grid.column.class2}}</div>
 </div>
+
+<h2>Column Grid Blocks</h2>
+<div class="cols-3 gutter">
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+    <div class="border"></div>
+</div>
