Removing unused files, adding bower, clear fixing %columns (again), adding "peek" option for drawers (take that, Foundation!), working on %color- components (WIP)

--- a/scss/modules/grid/_classes.scss
+++ b/scss/modules/grid/_classes.scss
@@ -21,8 +21,12 @@
 .pad-horizontal-none { @extend %pad-horizontal-none; }
 
 // Horizontal Grid Classes
-#{prefixed-class('col')}, #{prefixed-class('column')}, #{prefixed-class('columns', $selector: ' > *')}, #{prefixed-class('cols', $selector: ' > *')} {
+#{prefixed-class('col')}, #{prefixed-class('cols', $selector: ' > *')} {
 	@extend %column;
+}
+
+#{prefixed-class('cols')} {
+	@extend %columns;
 }
 
 @each $mq in $grid-column-mqs {
