Adding %button-inline (might not be necessary); Adding %button-circle[-small/large]; Fixing scope of text-decoration in button component; Fixing column gutters; Removing display prescribing on shapes; Removing %anchor-fill;

--- a/docs/views/buttons.html
+++ b/docs/views/buttons.html
@@ -16,7 +16,7 @@
 
 <h2>Button Positions</h2>
 <div class="row field" ng-repeat="position in ['left','right','block']">
-    <a class="button {{position}}">a.{{position}}</a>
+    <a class="button {{position}}"><span>a.{{position}}</span></a>
 </div>
 
 <h2>Button Groups</h2>
@@ -39,3 +39,4 @@
     <button>Button 4</button>
     <button>Button 5</button>
 </div>
+
