--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -23,7 +23,10 @@
     @include type-scale($button-scale);
     text-align: center;
     text-transform: $button-text-transform;
-    text-decoration: $button-decoration;
+
+    &, & > * {
+        text-decoration: $button-decoration;
+    }
 }
 
 %button-box {
@@ -42,7 +45,7 @@
 }
 
 %button-hover {
-    text-decoration: $button-hover-decoration;
+    &, & > * { text-decoration: $button-hover-decoration; }
 }
 
 %button-tiny, %buttons-tiny > %button {
@@ -77,6 +80,10 @@
     margin-right: 0;
 }
 
+%button-inline {
+    display: inline-block;
+}
+
 %button-block {
     display: block;
     margin: 0;
@@ -101,6 +108,16 @@
         width: 100%;
         border-radius: 0;
     }
+}
+
+%button-circle {
+    @extend %text-midcenter;
+    @extend %circle-medium;
+    display: inline-block;
+    padding: 0;
+
+    &-small { @extend %circle-small; }
+    &-large { @extend %circle-large; }
 }
 
 %button-disabled {
