--- a/scss/modules/layout/_classes.scss
+++ b/scss/modules/layout/_classes.scss
@@ -50,3 +50,13 @@
 .content-middle {
     @extend %content-middle;
 }
+
+#{prefixed-class('ratio')} {
+    @extend %ratio;
+}
+
+.ratio {
+    @each $ratio in map-keys($ratios) {
+        &-#{$ratio} { @extend %ratio-#{$ratio}; }
+    }
+}
