--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -557,8 +557,8 @@
 </section>
 <section class="row-12">
     <aside class="drawer-left bg-dark mode-light" ng-class="{active: component.ff}">
-        <div class="row-center pad-large">
-            <nav class="small strong uppercase">
+        <div class="row-center">
+            <!-- <nav class="small strong uppercase">
                 <h2 class="strong uppercase">
                     Menu
                     <hr class="thick small light">
@@ -572,7 +572,11 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
-            </nav>
+            </nav> -->
+            <div class="row">
+                <div class="tile-control"><i class="fa fa-plane"></i></div>
+                <div class="tile-content"><a href="#">Hey there</a></div>
+            </div>
         </div>
     </aside>
     <div class="layer transition">
