--- a/scss/modules/_layout.scss
+++ b/scss/modules/_layout.scss
@@ -152,6 +152,11 @@
         display: block;
     }
 
+    &-inline {
+        @extend %pseudo;
+        display: inline-block;
+    }
+
     &-absolute {
         @extend %pseudo-block;
         position: absolute;
