--- a/scss/modules/layers/_module.scss
+++ b/scss/modules/layers/_module.scss
@@ -30,6 +30,7 @@ $drawer-style: default !default;
 $drawer-theme: default !default;
 $drawer-mqs: (small, medium, all) !default;
 $drawer-positions: (left, right, top, bottom) !default;
+$drawer-peek-width: 4rem !default;
 $drawer-static-width: 20rem !default;
 $drawer-static-height: 20rem !default;
 $drawer-full-width: column-width(10) !default;
