--- a/scss/modules/layout/_components.scss
+++ b/scss/modules/layout/_components.scss
@@ -62,7 +62,7 @@
     padding-bottom: 0;
 
     > * {
-        @extend %page;
+        @extend %layer;
     }
 
     @each $ratio-key, $ratio-value in $ratios {
