--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -102,6 +102,10 @@ $hr-color-light: $color-light !default;
 $hr-color-dark: $color-dark !default;
 $hr-color: theme-mode($color-light, $color-dark) !default;
 
+// Type Rule
+$type-rule-margin-vertical: 1rem !default;
+$type-rule-margin-horizontal: 1rem !default;
+
 // Lists
 $type-list-position: outside !default;
 $type-list-margin-bottom: 1rem !default;
